--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
   <LinearLayout android:orientation="vertical"
     android:gravity="top"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <include layout="@layout/activity_navigation"/>
 
     <Button
         android:id="@+id/covid"
