--- a/app/src/main/res/layout/activity_audio.xml
+++ b/app/src/main/res/layout/activity_audio.xml
@@ -3,15 +3,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout android:orientation="vertical"
+    <LinearLayout
+        android:layout_width="match_parent"
 
 
-
-        android:gravity="top"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:gravity="center|top"
+        android:orientation="vertical">
 
-        <include layout="@layout/activity_navigation"/>
+        <include layout="@layout/activity_navigation" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Back"
+            android:textSize="24sp" />
+
+        <FrameLayout
+            android:id="@+id/frAudio"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
     </LinearLayout>
 
